# crabbysearch

./: Cargo.toml  Dockerfile  README.md
public/static/: cookies.js  settings.js
src/: cache.rs  config.rs  main.rs
src/cache/: cacher.rs
src/config/: parser.rs
src/engines/: bing.rs  brave.rs  duckduckgo.rs  librex.rs  mod.rs  mojeek.rs  searx.rs  startpage.rs
src/handler/: mod.rs
src/models/: aggregation_models.rs  engine_models.rs  parser_models.rs  server_models.rs
src/results/: aggregator.rs
src/server/: mod.rs  router.rs
src/server/routes/: search.rs
src/templates/: mod.rs
src/templates/partials/: bar.rs  footer.rs  header.rs  mod.rs  navbar.rs  search_bar.rs
src/templates/partials/settings_tabs/: cookies.rs  engines.rs  mod.rs  user_interface.rs
src/templates/views/: about.rs  index.rs  mod.rs  not_found.rs  search.rs  settings.rs
